--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
             <li><a class="menu">AUTORES</a>
                  <ul>
-                    <li><a href="eduard_cespedes.html" class="menu">Andres Felipe Rendon</a></li>
+                    <li><a href="andres_rendon.html" class="menu">Andres Felipe Rendon</a></li>
                     
                 </ul>
             </li>
