--- a/git.html
+++ b/git.html
@@ -27,8 +27,10 @@
                     <li><a href="git.html" class="menu">GIT</a></li>
                     <li><a href="github.html" class="menu">GITHUB</a></li>
                     <li><a href="github_pages.html" class="menu">GITHUB PAGES</a></li>
+                    <!-- Por falta de tiempo se descartaron estos dos submenus
+
                     <li><a href="html5.html" class="menu">HTML5</a></li>
-                    <li><a href="css3.html" class="menu">CSS3</a></li>
+                    <li><a href="css3.html" class="menu">CSS3</a></li> -->
                 </ul>
             </li>
             <li><a class="menu">MULTIMEDIA</a>
@@ -138,7 +140,7 @@
             </figure> 
     	</section>
     	<footer>
-    <h5>
+    <h5 >
     UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA | DISEÑO DE SITIOS WEB GRUPO_301122_76
     </h5>
         <h5>
