--- a/descargas.html
+++ b/descargas.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
+<head>
 		<title> Programacion WEB 1 </title>
 		<meta charset= "utf-8">
 		<meta name='author' content='Andres Felipe Rendon, rendonfelipe96@gmail.com'>
 		<meta name='description' content='Este sitio aborda las tematicas de entrada para la materia programacion web -1'>
 		<meta name='keywords' content='UNAD, html, css, git, github, web, diseño, sitio, OVI'>
 		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style_des.css">
 		<!-- type="text/css" -->
 	</head>	
-
-	<body>
-			<div id="contenidos">
+<body>
+<div id="contenidos">
 				<!-- podremos llamar todo el bloque en la hoja de estilos   -->
 					<header>	
 					 <h1> OVI Programacion Web 1 </h1>
@@ -57,36 +56,44 @@
         </ul>
     </nav>
 			<section>
-			
-
-
-			<aside>	
-			<article>	
-			<h3> Saludo Incial </h3>
-			<h4> Bienvenidos:</h4>
-			<p> La realizacion de esta pagina fue fruto de una idea con fines netamente educativos; cada uno de los productos alojados en la misma fue producto de terceros y estan protejidos por derechos de autor.</p>
-			<p> En el presente OVI se encontrara distintos materiales de consulta, esto para facilitar el aprendizaje de las tematicas a tratar, la realizacion del presente OVI se realizara en lo mas posible con los lineamentos pedidos por el tutor del programa en la rubrica de actividades.</p>
-			</article>
-			</aside>
-			<aside>
 				<article>
-			<h3> Objetivos </h3>
-			<p> El presente OVI tiene como finalidad dar a conocer informacion basica y puntual sobre el manejo de herramientas empleadas en el desarrollo web tales como: editores de texto (Sublime text para este caso en particular), Git, Github, html5 y CCS3.</p>
-			<p> Para esto se dara informacion basica de como es y como funcionan cada item mencionados anteriormente, ademas de presentar tutoriales de instalacion y uso.</p>
-			</article>
-			</aside>
-			<aside>
+					<h3> Material de descarga </h3>
+					<p> Para que puedas afrontar las tematicas del curso Programacion Web I, del tecnologo de desarrollo de software, nos vimos en la tarea de recopilar las herramientas de desarrollo mencionadas en el transcurso del OVI presente, las cuales son: Git, Github y Sublime Text (Editor de texto elegido por parte del desarrollador.) </p>
+				</article>
+
+				<aside>
+            <h3>Git</h3>
+             <figure>
+                <a href="https://git-scm.com/downloads" target=_blank><img src="img/Git.png" alt="git_logo"></a>
+             </figure>
+    </aside>
+    <aside>
+    	<h3>Git hub</h3>
+    	<figure>
+    		<a href="https://desktop.github.com/" target=_blank><img src="img/github.png" alt="github_logo"></a>
+    	</figure>
+    </aside>
+
+    <aside>
+    	<h3> Sublime Text </h3>
+    	<figure>
+    		<a href="https://www.sublimetext.com/download" target=_blank><img src="img/Sublime.png" alt="sublime_logo"></a>
+    	</figure>
+    </aside>
+    <aside>
 				<a class="twitter-timeline" data-width= "100%" data-height= "480" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</aside>
-		
-			<br><br><br><br><br><br><br><br><br><br><br><br>
-<figure>
-	<img src="img/logo.png">
-</figure>
 
+			<article>
+				<p> Ademas para solventar tus dudas te incluimos el siguiente tutorial acerca de la instalacion del editor de texto sublime text, y para tu ayuda en el mismo tutorial muestran la manera de poner el editor de texto en español. </p>
+			</article>
+			<div class="responsive">	
+			<iframe width="640" height="480" src="https://www.youtube.com/embed/c6kjxNTb95M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
+			</div>
 
-			</section>		
-<footer>
+			</section>
+
+			<footer>
     <h5>
     UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA | DISEÑO DE SITIOS WEB 301122_90 | ANDRES FELIPE RENDON RODRIGUEZ 
     <br>
@@ -96,7 +103,6 @@
     VISITAS <script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=g86kketrx9lky8rj3azub5ta7a7ed2wd"></script> <noscript><a href="https://www.contadorvisitasgratis.com" title="contadores para paginas web"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=g86kketrx9lky8rj3azub5ta7a7ed2wd" title="contadores para paginas web" alt="contadores para paginas web"></a></noscript>
     </h5>
 	</footer>
-			</div>
-	</body>
-<!-- Comentario   -->
+			
+</body>
 </html>
