--- a/github_pages.html
+++ b/github_pages.html
@@ -24,6 +24,7 @@
                     <li><a href="git.html" class="menu">GIT</a></li>
                     <li><a href="github.html" class="menu">GITHUB</a></li>
                     <li><a href="github_pages.html" class="menu">GITHUB PAGES</a></li>
+                    <li><a href="descargas.html" class="menu">DESCARGAS</a></li>
                    <!-- Por falta de tiempo se descartaron estos dos submenus    
                    <li><a href="html5.html" class="menu">HTML5</a></li>
                    <li><a href="css3.html" class="menu">CSS3</a></li> -->
