--- a/git-github.html
+++ b/git-github.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<title> Programacion WEB 1 </title>
+<head>
+	<title> Programacion WEB 1 </title>
 		<meta charset= "utf-8">
 		<meta name='author' content='Andres Felipe Rendon, rendonfelipe96@gmail.com'>
 		<meta name='description' content='Este sitio aborda las tematicas de entrada para la materia programacion web -1'>
 		<meta name='keywords' content='UNAD, html, css, git, github, web, diseño, sitio, OVI'>
 		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-		<link rel="stylesheet" href="css/style.css">
-		<!-- type="text/css" -->
-	</head>	
-
-	<body>
-			<div id="contenidos">
+		<link rel="stylesheet" href="css/style_git.css">
+	
+</head>
+<body>
+<div id="contenidos">
 				<!-- podremos llamar todo el bloque en la hoja de estilos   -->
 					<header>	
 					 <h1> OVI Programacion Web 1 </h1>
@@ -56,37 +55,30 @@
             </li>
         </ul>
     </nav>
-			<section>
-			
-
-
-			<aside>	
-			<article>	
-			<h3> Saludo Incial </h3>
-			<h4> Bienvenidos:</h4>
-			<p> La realizacion de esta pagina fue fruto de una idea con fines netamente educativos; cada uno de los productos alojados en la misma fue producto de terceros y estan protejidos por derechos de autor.</p>
-			<p> En el presente OVI se encontrara distintos materiales de consulta, esto para facilitar el aprendizaje de las tematicas a tratar, la realizacion del presente OVI se realizara en lo mas posible con los lineamentos pedidos por el tutor del programa en la rubrica de actividades.</p>
-			</article>
+    <section>
+    	<aside>
+				<a class="twitter-timeline" data-width= "100%" data-height= "400" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</aside>
-			<aside>
-				<article>
-			<h3> Objetivos </h3>
-			<p> El presente OVI tiene como finalidad dar a conocer informacion basica y puntual sobre el manejo de herramientas empleadas en el desarrollo web tales como: editores de texto (Sublime text para este caso en particular), Git, Github, html5 y CCS3.</p>
-			<p> Para esto se dara informacion basica de como es y como funcionan cada item mencionados anteriormente, ademas de presentar tutoriales de instalacion y uso.</p>
-			</article>
-			</aside>
-			<aside>
-				<a class="twitter-timeline" data-width= "100%" data-height= "480" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</aside>
-		
-			<br><br><br><br><br><br><br><br><br><br><br><br>
-<figure>
-	<img src="img/logo.png">
-</figure>
+    	<article>
+    		<h3> Material de apoyo</h3>
+    		<h4>¡Nota aclatoria! </h4>
+    		<p>
+    		En primera instancia reciba un cordial saludo de mi parte querido tutor, en el presente texto quiero excusarme por no seguir las instrucciones de la rubrica de evaluacion, despues de meditarlo mucho decidi en este caso por falta de tiempo anexar contenido de terceros y no contenido multimedia propio como lo sugiere la rubrica previamente mencionada, dicho material sera citado bajo la normativa apa 6th edition. Guardando siempre sus respectivos derechos de autor. 	
+    		</p>
+    		<p>
+    			Continuando con todo esto, decido anexar la lista de reproduccion de videos de youtube que se visualizara mas abajo. dicha lista la elegi por su gran practicidad y ademas por lo conciso y claro que son sus videos, Me fue de suma utilidad a la hora de sacar este proyecto adelante.
+    		<!--Continuando con todo esto, decido anexar las dos listas de reproduccion de videos de youtube que se visualizaran mas abajo. Ambas listas las elegi por su gran practicidad y ademas por lo conciso y claro que son sus videos, las dos me fueron de gran utilidad para sacar este proyecto adelante.-->	
+    		</p>
 
 
-			</section>		
-<footer>
+
+    		<iframe width= 70% height= "550" src="https://www.youtube.com/embed/videoseries?list=PL9xYXqvLX2kMUrXTvDY6GI2hgacfy0rId" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    		
+    		<!--https://www.youtube.com/watch?v=cqMfPS8jPys&list=PLhSj3UTs2_yVHt2DgHky_MzzRC58UHE4z-->
+    	</article>
+    	
+    </section>
+    <footer>
     <h5>
     UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA | DISEÑO DE SITIOS WEB 301122_90 | ANDRES FELIPE RENDON RODRIGUEZ 
     <br>
@@ -96,7 +88,6 @@
     VISITAS <script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=g86kketrx9lky8rj3azub5ta7a7ed2wd"></script> <noscript><a href="https://www.contadorvisitasgratis.com" title="contadores para paginas web"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=g86kketrx9lky8rj3azub5ta7a7ed2wd" title="contadores para paginas web" alt="contadores para paginas web"></a></noscript>
     </h5>
 	</footer>
-			</div>
-	</body>
-<!-- Comentario   -->
+</div>
+</body>
 </html>
